--- a/app/userdetails.gentelella/userdetails-g.component.html
+++ b/app/userdetails.gentelella/userdetails-g.component.html
@@ -1,9 +1,10 @@
-          <div class="">
-            <div class="page-title">
-              <div class="title_left">
-                <h3>User Profile</h3>
-              </div>
-              <!--<div class="title_right">
+<!--TBD: delete -->
+<div class="" style="height:800px;">
+  <div class="page-title">
+    <div class="title_left">
+      <h3>User Profile</h3>
+    </div>
+    <!--<div class="title_right">
                 <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
                   <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search for...">
@@ -14,15 +15,15 @@
                 </div>
               </div>
             </div>-->
-            
-            <!--<div class="clearfix"></div>-->
 
-            <div class="row">
-              <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="x_panel">
-                    <div class="x_title">
-                        <h2>User Report </h2>
-                        <!--<ul class="nav navbar-right panel_toolbox">
+    <!--<div class="clearfix"></div>-->
+
+    <div class="row">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="x_panel">
+          <div class="x_title">
+            <h2>User Report </h2>
+            <!--<ul class="nav navbar-right panel_toolbox">
                         <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                         </li>
                         <li class="dropdown">
@@ -37,37 +38,37 @@
                         <li><a class="close-link"><i class="fa fa-close"></i></a>
                         </li>
                         </ul>-->
-                        <div class="clearfix"></div>
-                    </div>
-                  <div class="x_content">
-                    <div class="col-md-3 col-sm-3 col-xs-12 profile_left">
-                      <div class="profile_img">
-                        <div id="crop-avatar">
-                          <!-- Current avatar -->
-                          <img class="img-responsive avatar-view" src="http://lorempixel.com/g/200/200/" alt="Avatar" title="Change the avatar">
-                        </div>
-                      </div>
-                      <h3>(User.Name)</h3>
+            <div class="clearfix"></div>
+          </div>
+          <div class="x_content">
+            <div class="col-md-3 col-sm-3 col-xs-12 profile_left">
+              <div class="profile_img">
+                <div id="crop-avatar">
+                  <!-- Current avatar -->
+                  <img class="img-responsive avatar-view" src="http://lorempixel.com/g/200/200/" alt="Avatar" title="Change the avatar">
+                </div>
+              </div>
+              <h3>(User.Name)</h3>
 
-                      <ul class="list-unstyled user_data">
-                        <li><i class="fa fa-map-marker user-profile-icon"></i>(User.Course)
-                        </li>
+              <ul class="list-unstyled user_data">
+                <li><i class="fa fa-map-marker user-profile-icon"></i>(User.Course)
+                </li>
 
-                        <li>
-                          <i class="fa fa-briefcase user-profile-icon"></i> (User.Title)
-                        </li>
+                <li>
+                  <i class="fa fa-briefcase user-profile-icon"></i> (User.Title)
+                </li>
 
-                        <li class="m-top-xs">
-                          <i class="fa fa-external-link user-profile-icon"></i>
-                          <a href="#" target="_blank">(User.Site)</a>
-                        </li>
-                      </ul>
+                <li class="m-top-xs">
+                  <i class="fa fa-external-link user-profile-icon"></i>
+                  <a href="#" target="_blank">(User.Site)</a>
+                </li>
+              </ul>
 
-                      <a class="btn btn-success"><i class="fa fa-edit m-right-xs"></i>Edit Profile</a>
-                      <br />
+              <a class="btn btn-success"><i class="fa fa-edit m-right-xs"></i>Edit Profile</a>
+              <br />
 
-                      <!-- start skills -->
-                      <!--<h4>Skills</h4>
+              <!-- start skills -->
+              <!--<h4>Skills</h4>
                       <ul class="list-unstyled user_data">
                         <li>
                           <p>Web Applications</p>
@@ -94,12 +95,12 @@
                           </div>
                         </li>
                       </ul>-->
-                      <!-- end of skills -->
+              <!-- end of skills -->
 
-                    </div>
-                    <div class="col-md-9 col-sm-9 col-xs-12">
+            </div>
+            <div class="col-md-9 col-sm-9 col-xs-12">
 
-                      <!--<div class="profile_title">
+              <!--<div class="profile_title">
                         <div class="col-md-6">
                           <h2>User Activity Report</h2>
                         </div>
@@ -110,30 +111,32 @@
                           </div>
                         </div>
                       </div>-->
-                      <!-- start of user-activity-graph -->
-                      <!--<div id="graph_bar" style="width:100%; height:280px;"></div>-->
-                      <!-- end of user-activity-graph -->
+              <!-- start of user-activity-graph -->
+              <!--<div id="graph_bar" style="width:100%; height:280px;"></div>-->
+              <!-- end of user-activity-graph -->
 
-                      <div class="" role="tabpanel" data-example-id="togglable-tabs">
-                        <ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
-                          <li role="presentation" class="active"><a href="#tab_content1" role="tab" id="profile-tab" data-toggle="tab" aria-expanded="false">Profile Details</a>
-                          </li>
-                          <li  role="presentation" class=""><a href="#tab_content3" role="tab" id="profile-tab2" data-toggle="tab" aria-expanded="false">Courses</a>
-                          </li>
-                        </ul>
-                        <div id="myTabContent" class="tab-content">
-                          <div role="tabpanel" class="tab-pane fade active in" id="tab_content1" aria-labelledby="home-tab">
-                              Home info
-                          </div>
-                          <div role="tabpanel" class="tab-pane fade" id="tab_content3" aria-labelledby="profile-tab">
-                              Courses info
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+              <div class="" role="tabpanel" data-example-id="togglable-tabs">
+                <ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
+                  <li role="presentation" class="active"><a href="#tab_content1" role="tab" id="profile-tab" data-toggle="tab" aria-expanded="false">Profile Details</a>
+                  </li>
+                  <li role="presentation" class=""><a href="#tab_content3" role="tab" id="profile-tab2" data-toggle="tab" aria-expanded="false">Courses</a>
+                  </li>
+                </ul>
+                <div id="myTabContent" class="tab-content">
+                  <div role="tabpanel" class="tab-pane fade active in" id="tab_content1" aria-labelledby="home-tab">
+                    Home info
+                  </div>
+                  <div role="tabpanel" class="tab-pane fade" id="tab_content3" aria-labelledby="profile-tab">
+                    Courses info
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        <!-- /page content -->
+        </div>
+      </div>
+    </div>
+  </div>
+        
+
+  <!-- /page content -->
