home component, animation

--- a/app/sidebar.gentelella/sidebar-g.component.html
+++ b/app/sidebar.gentelella/sidebar-g.component.html
@@ -46,7 +46,7 @@
               <div class="menu_section">
                 <h3>Additional materials</h3>
                 <ul class="nav side-menu">
-                  <li><a routerLink="/dashboard"><i class="fa fa-print"></i> Additional Pages <span class="fa fa-chevron-right"></span></a>
+                  <li><a routerLink="/dashboard"><i class="fa fa-calendar"></i>Calendar<span class="fa fa-chevron-right"></span></a>
                   </li>
                   <li><a routerLink="/dashboard/"><i class="fa fa-puzzle-piece"></i> Miscellaneous <span class="fa fa-chevron-right"></span></a>
                   </li>
@@ -61,13 +61,13 @@
               <a data-toggle="tooltip" data-placement="top" >
                 <span class="glyphicon" aria-hidden="true"></span>
               </a>
-              <a data-toggle="tooltip" data-placement="top" >
-                <span class="glyphicon" aria-hidden="true"></span>
+              <a data-toggle="tooltip" data-placement="top" routerLink="/home">
+                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
               </a>
               <a data-toggle="tooltip" data-placement="top" title="Settings">
                 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
               </a>
-              <a data-toggle="tooltip" data-placement="top" title="Logout" routerLink="/login">
+              <a  data-placement="top" title="Logout" routerLink="/login">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
               </a>
             </div>
