--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,9 +1,38 @@
-<div class="container-fluid">
+<nav class="navbar navbar-default navbar-static-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">News</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a routerLink="/">Log in</a></li>
+        <!--<li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>-->
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+<div style="height:50px;" name="clearfix"></div>
+<div class="container container-fluid">
 	<div class="row">
 		<div class="col-md-12">
+
 			<div class="page-header">
 				<h1>
-				IMEM Home <small>news, materials</small>
+					IMEM Home <small>news, materials</small>
 				</h1>
 			</div>
 			<div class="row">
@@ -13,18 +42,19 @@
 					<div class="bs-example" data-example-id="simple-jumbotron">
 						<div class="jumbotron">
 							<h1>Hello, world!</h1>
-							<p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or
-								information.</p>
+							<p>simple jumbotron-style component for calling extra attention to featured content or information.
+							</p>
 						</div>
+					</div>
 				</div>
 			</div>
+			<h3>
+				h3. Lorem ipsum dolor sit amet.
+			</h3>
+			<h3>
+				h3. Lorem ipsum dolor sit amet.
+			</h3>
 		</div>
-		<h3>
-			h3. Lorem ipsum dolor sit amet.
-		</h3>
-		<h3>
-			h3. Lorem ipsum dolor sit amet.
-		</h3>
 	</div>
-</div>
+	<div class="row" style="height:400px;"></div>
 </div>
