login module confige service

--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -15,7 +15,7 @@
                 <input type="password" class="form-control" placeholder="Password" required="" />
               </div>
               <div>
-                <a class="btn btn-default submit" href="index.html">Log in</a>
+                <a class="btn btn-default submit" routerLink="/">Log in</a>
                 <a class="reset_pass" routerLink="/restorepassword">Lost your password?</a>
               </div>
 
