auth service;  login form

--- a/app/dashboard/sidebar.gentelella/sidebar-g.component.html
+++ b/app/dashboard/sidebar.gentelella/sidebar-g.component.html
@@ -67,7 +67,7 @@
               <a data-toggle="tooltip" data-placement="top" title="Settings">
                 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
               </a>
-              <a  data-placement="top" title="Logout" routerLink="/login">
+              <a (click)="logout()" data-placement="top" title="Logout" routerLink="/login">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
               </a>
             </div>
