--- a/app/login/sign-up.component.html
+++ b/app/login/sign-up.component.html
@@ -1,4 +1,4 @@
-<div id="register" class="col-sm-offset-4 col-sm-4 form">
+<div id="register" class="col-xs-offset-4 col-xs-4 form">
 	<section class="login_content">
 		<form>
 			<h1>Create Account</h1>
