--- a/app/login/password-loss.component.html
+++ b/app/login/password-loss.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-offset-4 col-sm-4 form">
+<div class="col-xs-offset-4 col-xs-4 form">
 	<section class="login_content">
 		<form>
 			<h1>Restore password: </h1>
