--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-default navbar-static-top">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">News</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a routerLink="/">Log in</a></li>
-        <!--<li class="dropdown">
+	<div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+		</div>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">News</a></li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a routerLink="/">Log in</a></li>
+				<!--<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
@@ -21,9 +21,11 @@
             <li><a href="#">Separated link</a></li>
           </ul>
         </li>-->
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+			</ul>
+		</div>
+		<!-- /.navbar-collapse -->
+	</div>
+	<!-- /.container-fluid -->
 </nav>
 <div style="height:50px;" name="clearfix"></div>
 <div class="container container-fluid">
@@ -37,8 +39,82 @@
 			</div>
 			<div class="row">
 				<div class="col-md-8">
+					<div class="col-md-offset-1 x_title">
+						<h2>News <small>Sessions</small></h2>
+						<div class="clearfix"></div>
+					</div>
+					<div class="x_content">
+						<ul class="list-unstyled timeline">
+							<li>
+								<div class="block">
+									<div class="tags">
+										<a href="" class="tag">
+											<span>News</span>
+										</a>
+									</div>
+									<div class="block_content">
+										<h2 class="title">
+											<a>Theme</a>
+										</h2>
+										<div class="byline">
+											<span>13 hours ago</span> by <a>Admin</a>
+										</div>
+										<p class="excerpt"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+											magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+											consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+											Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+										</p>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="block">
+									<div class="tags">
+										<a href="" class="tag">
+											<span>News</span>
+										</a>
+									</div>
+									<div class="block_content">
+										<h2 class="title">
+											<a>Theme</a>
+										</h2>
+										<div class="byline">
+											<span>13 hours ago</span> by <a>Admin</a>
+										</div>
+										<p class="excerpt"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+											magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+											consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+											Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+										</p>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="block">
+									<div class="tags">
+										<a href="" class="tag">
+											<span>News</span>
+										</a>
+									</div>
+									<div class="block_content">
+										<h2 class="title">
+											<a>Theme</a>
+										</h2>
+										<div class="byline">
+											<span>13 hours ago</span> by <a>Admin</a>
+										</div>
+										<p class="excerpt"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+											magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+											consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+											Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+										</p>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-offset-1 col-md-3">
 					<div class="bs-example" data-example-id="simple-jumbotron">
 						<div class="jumbotron">
 							<h1>Hello, world!</h1>
