login component background fix

--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -1,5 +1,5 @@
-<body class="login">
-	<div>
+<!--<body class="login">-->
+	<div class='login'>
 		<a class="hiddenanchor" id="signup"></a>
 		<a class="hiddenanchor" id="signin"></a>
 
@@ -54,4 +54,4 @@
 			</div>
 		</div>
 	</div>
-</body>
+<!--</body>-->
