--- a/app/dashboard/courses.component/courses.component.html
+++ b/app/dashboard/courses.component/courses.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-md-12 col-sm-12 col-xs-12">
+	<!--<div class="col-md-12 col-sm-12 col-xs-12">
 		<div class="x_panel">
 			<div class="x_title">
 				<h2>Courses</h2>
@@ -22,7 +22,55 @@
 					</tbody>
 				</table>
 			</div>
+			
 		</div>
-	</div>
+	</div>-->
+	<div style="margin: auto; max-width: 1000px; margin-bottom: 50px;">
+    <data-table id="persons-grid"
+        headerTitle="Courses"
+        [items]="courses"
+        [itemCount]="itemCount"
+        (reload)="reloadItems($event)"
+        (rowClick)="rowClick($event)"
+        (rowDoubleClick)="rowDoubleClick($event)"
+        [rowTooltip]="rowTooltip"
+        >
+        <data-table-column
+            [property]="'Name'"
+            [header]="'Name'"
+            [sortable]="true"
+            [resizable]="true">
+        </data-table-column>
+        <data-table-column
+            [property]="'StartDate'"
+            [header]="'Start Date'"
+            [sortable]="true">
+            <template #dataTableCell let-item="item">
+                <span>{{item.StartDate | date:'dd-MM-yyyy'}}</span>
+            </template>
+        </data-table-column>
+		<data-table-column
+            [property]="'EndDate'"
+            [header]="'End Date'"
+            [sortable]="true">
+            <template #dataTableCell let-item="item">
+                <span>{{item.EndDate | date:'dd-MM-yyyy'}}</span>
+            </template>
+        </data-table-column>
+        <data-table-column
+            [property]="'CourseStatus'"
+            [header]="'Status'"
+            [sortable]="true"
+            [resizable]="true">
+        </data-table-column>
+        <data-table-column
+            [property]="'Lecturer'"
+            [header]="'Lecturer'"
+            [sortable]="true"
+            [resizable]="true">
+        </data-table-column>
+
+    </data-table>
+</div>
 </div>
 <div class="clearfix"></div>
