l8n, lecture layout etc

--- a/app/dashboard/calendar.gentelella/calendar.component.html
+++ b/app/dashboard/calendar.gentelella/calendar.component.html
@@ -1,6 +1,6 @@
 <div class="page-title">
 	<div class="title_left">
-		<h3>Calendar <small>Click to add/edit events</small></h3>
+		<h3>Календар <small></small></h3>
 	</div>
 	<div class="title_right">
 
@@ -11,7 +11,7 @@
 	<div class="col-md-12">
 		<div class="x_panel">
 			<div class="x_title">
-				<h2>Calendar Events <small>Sessions</small></h2>
+				<h2>Календар учбового порталу ІМЕМ<small>Sessions</small></h2>
 				<div class="clearfix"></div>
 			</div>
 			<div class="x_content">
@@ -27,19 +27,19 @@
 
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-				<h4 class="modal-title" id="myModalLabel">New Calendar Entry</h4>
+				<h4 class="modal-title" id="myModalLabel">Новий запис</h4>
 			</div>
 			<div class="modal-body">
 				<div id="testmodal" style="padding: 5px 20px;">
 					<form id="antoform" class="form-horizontal calender" role="form">
 						<div class="form-group">
-							<label class="col-sm-3 control-label">Title</label>
+							<label class="col-sm-3 control-label">Назва</label>
 							<div class="col-sm-9">
 								<input type="text" class="form-control" id="title" name="title">
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="col-sm-3 control-label">Description</label>
+							<label class="col-sm-3 control-label">Опис</label>
 							<div class="col-sm-9">
 								<textarea class="form-control" style="height:55px;" id="descr" name="descr"></textarea>
 							</div>
@@ -48,8 +48,8 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-default antoclose" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary antosubmit">Save changes</button>
+				<button type="button" class="btn btn-default antoclose" data-dismiss="modal">Закрити</button>
+				<button type="button" class="btn btn-primary antosubmit">Зберегти</button>
 			</div>
 		</div>
 	</div>
@@ -60,20 +60,20 @@
 
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-				<h4 class="modal-title" id="myModalLabel2">Edit Calendar Entry</h4>
+				<h4 class="modal-title" id="myModalLabel2">Редагувати запис</h4>
 			</div>
 			<div class="modal-body">
 
 				<div id="testmodal2" style="padding: 5px 20px;">
 					<form id="antoform2" class="form-horizontal calender" role="form">
 						<div class="form-group">
-							<label class="col-sm-3 control-label">Title</label>
+							<label class="col-sm-3 control-label">Назва</label>
 							<div class="col-sm-9">
 								<input type="text" class="form-control" id="title2" name="title2">
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="col-sm-3 control-label">Description</label>
+							<label class="col-sm-3 control-label">Опис</label>
 							<div class="col-sm-9">
 								<textarea class="form-control" style="height:55px;" id="descr2" name="descr"></textarea>
 							</div>
@@ -83,8 +83,8 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-default antoclose2" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary antosubmit2">Save changes</button>
+				<button type="button" class="btn btn-default antoclose2" data-dismiss="modal">Закрити</button>
+				<button type="button" class="btn btn-primary antosubmit2">Зберегти</button>
 			</div>
 		</div>
 	</div>
