--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -7,7 +7,7 @@
 			<div class="animate form login_form">
 				<section class="login_content">
 					<form>
-						<h1>Login Form</h1>
+						<h1>ИМЕМ</h1>
 						<div>
 							<input [(ngModel)]="user.email" name="email" type="text"
 									class="form-control"
@@ -35,15 +35,15 @@
 							 </div>
 						</div>
 						<div>
-							<a class="btn btn-default submit" (click)="login()" routerLink="" tabindex="3">Log in</a>
-							<a class="reset_pass" routerLink="/restorepassword" tabindex="4">Lost your password?</a>
+							<a class="btn btn-default submit" (click)="login()" routerLink="" tabindex="3">Увійти</a>
+							<a class="reset_pass" routerLink="/restorepassword" tabindex="4">Забув пароль?</a>
 						</div>
 
 						<div class="clearfix"></div>
 
 						<div class="separator">
-							<p class="change_link">New to site?
-								<a routerLink="/signup" class="to_register"> Create Account </a>
+							<p class="change_link">Немає аккаунта?
+								<a routerLink="/signup" class="to_register"> Зареєструватися! </a>
 							</p>
 
 							<div class="clearfix"></div>
