--- a/app/login/password-loss.component.html
+++ b/app/login/password-loss.component.html
@@ -1,18 +1,18 @@
 <div class="col-xs-offset-4 col-xs-4 form">
 	<section class="login_content">
 		<form>
-			<h1>Restore password: </h1>
+			<h1>Відновити пароль: </h1>
 			<div>
 				<input type="email" class="form-control" placeholder="Email" required="" />
 			</div>
 			<div>
-				<a class="btn btn-default submit" href="index.html">Submit</a>
+				<a class="btn btn-default submit" href="index.html">Відправити</a>
 			</div>
 
 			<div class="clearfix"></div>
 			<div class="separator">
 				<p class="change_link">
-					<a routerLink="/login" class="to_register"> Back</a>
+					<a routerLink="/login" class="to_register"> Назад</a>
 				</p>
 				<div class="clearfix"></div>
 			</div>
