--- a/app/login/sign-up.component.html
+++ b/app/login/sign-up.component.html
@@ -1,7 +1,7 @@
 <div id="register" class="col-xs-offset-4 col-xs-4 form">
 	<section class="login_content">
 		<form>
-			<h1>Create Account</h1>
+			<h1>Реєстрація</h1>
 			<div>
 				<input type="text" class="form-control" placeholder="Username" required="" />
 			</div>
@@ -12,14 +12,14 @@
 				<input type="password" class="form-control" placeholder="Password" required="" />
 			</div>
 			<div>
-				<a class="btn btn-default submit" href="index.html">Submit</a>
+				<a class="btn btn-default submit" href="index.html">Зареєструватися</a>
 			</div>
 
 			<div class="clearfix"></div>
 
 			<div class="separator">
-				<p class="change_link">Already a member ?
-					<a routerLink="/login" class="to_register"> Log in </a>
+				<p class="change_link">У мене вже є аккаунт.
+					<a routerLink="/login" class="to_register"> <u>Увійти</u> </a>
 				</p>
 
 				<div class="clearfix"></div>
