--- a/app/dashboard/topnav.gentelella/topnav-g.component.html
+++ b/app/dashboard/topnav.gentelella/topnav-g.component.html
@@ -13,15 +13,15 @@
                     <span class=" fa fa-angle-down" style="padding-left:5px;"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="javascript:;"> Profile</a></li>
+                    <li><a href="javascript:;">Профіль</a></li>
                     <li>
                       <a href="javascript:;">
                         <!--<span class="badge bg-red pull-right">50%</span>-->
-                        <span>Settings</span>
+                        <span>Налаштування</span>
                       </a>
                     </li>
-                    <li><a href="javascript:;">Help</a></li>
-                    <li><a (click)="logout()" routerLink="/login"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                    <li><a href="javascript:;">Довідка</a></li>
+                    <li><a (click)="logout()" routerLink="/login"><i class="fa fa-sign-out pull-right"></i>Вийти</a></li>
                   </ul>
                 </li>
 
