--- a/app/dashboard/userdetails.gentelella/userdetails-g.component.html
+++ b/app/dashboard/userdetails.gentelella/userdetails-g.component.html
@@ -2,7 +2,7 @@
 <div class="" style="height:800px;">
   <div class="page-title">
     <div class="title_left">
-      <h3>User Profile</h3>
+      <h3>Головна сторінка учасника порталу</h3>
     </div>
     <!--<div class="title_right">
                 <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
@@ -22,7 +22,7 @@
       <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
           <div class="x_title">
-            <h2>User Report </h2>
+            <h2>Профіль</h2>
             <!--<ul class="nav navbar-right panel_toolbox">
                         <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                         </li>
@@ -50,20 +50,20 @@
               </div>
               <h3>{{_authService.sessionUser.email}}</h3>
               <ul class="list-unstyled user_data">
-                <li *ngIf="!_authService.isAdminSession()"><i class="fa fa-map-marker user-profile-icon"></i> (Student.course)
+                <li *ngIf="!_authService.isAdminSession()"><i class="fa fa-user user-profile-icon"></i> Студент#
                 </li>
 
                 <li>
-                  <i class="fa fa-briefcase user-profile-icon"></i> {{_authService.sessionUser.role}}
+                  <i class="fa fa-briefcase user-profile-icon"></i> Студент/Викладач
                 </li>
 
                 <li class="m-top-xs">
                   <i class="fa fa-external-link user-profile-icon"></i>
-                  <a href="#" target="_blank">[social link]</a>
+                  <a href="#" target="_blank">Пошта</a>
                 </li>
               </ul>
 
-              <a class="btn btn-success"><i class="fa fa-edit m-right-xs"></i>Edit Profile</a>
+              <a class="btn btn-success"><i class="fa fa-edit m-right-xs"></i>Редагувати Профіль</a>
               <br />
 
               <!-- start skills -->
@@ -116,16 +116,79 @@
 
               <div class="" role="tabpanel" data-example-id="togglable-tabs">
                 <ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
-                  <li role="presentation" class="active"><a href="#tab_content1" role="tab" id="profile-tab" data-toggle="tab" aria-expanded="false">Profile Details</a>
+                  <li role="presentation" class="active"><a href="#tab_content1" role="tab" id="profile-tab" data-toggle="tab" aria-expanded="false">Анкетні Дані</a>
                   </li>
-                  <li *ngIf="!_authService.isAdminSession()" role="presentation" class=""><a href="#tab_content3" role="tab" id="profile-tab2" data-toggle="tab" aria-expanded="false">Courses</a>
+                  <li *ngIf="!_authService.isAdminSession()" role="presentation" class=""><a href="#tab_content3" role="tab" id="profile-tab2" data-toggle="tab" aria-expanded="false">Курси</a>
                   </li>
                 </ul>
                 <div id="myTabContent" class="tab-content">
                   <div role="tabpanel" class="tab-pane fade active in" id="tab_content1" aria-labelledby="home-tab">
+<div class="row">
+              <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                  <div class="x_title">
+                    <h2>Загальні Відомості</h2>
+                    <div class="clearfix"></div>
+                  </div>
+                  <div class="x_content">
+                    <br />
+                    <fieldset disabled>
+                      
+                                          <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
+
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Ім'я
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <input type="text" id="first-name" required="required" value="Студент" class="form-control col-md-7 col-xs-12">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Прізвище
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <input type="text" id="last-name" name="last-name" value="Файний" class="form-control col-md-7 col-xs-12">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Телефон
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <input type="text" id="last-name" name="last-name" value="(+093)403-83-42" class="form-control col-md-7 col-xs-12">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Стать</label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <div id="gender" class="btn-group" data-toggle="buttons">
+                            <label class="btn btn-primary" >
+                              <input type="radio" name="gender" value="male"> &nbsp; Чоловiк &nbsp;
+                            </label>
+                            <label class="btn btn-default">
+                              <input type="radio" name="gender" value="female"> Жінка
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">День Народження
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
+                        </div>
+                      </div>
+                      <div class="ln_solid"></div>
+                    </form>
+                    </fieldset>
+
+                  </div>
+                </div>
+              </div>
+            </div>
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                   </div>
                   <div role="tabpanel" class="tab-pane fade" id="tab_content3" aria-labelledby="profile-tab">
+                    <courses [isMinVersion]="true"></courses>
                     "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
                   </div>
                 </div>
