--- a/imem/src/app/app.component.html
+++ b/imem/src/app/app.component.html
@@ -1,4 +1,5 @@
-  <body class="nav-md">
+<router-outlet></router-outlet>
+  <!--<body class="nav-md">
     <div class="container body">
       <div class="main_container">
         <div class="col-md-12">
@@ -13,4 +14,4 @@
         </div>
       </div>
     </div>
-  </body>
+  </body>-->
